feat(Root): Add intl to profile and think

--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -14,9 +14,11 @@
   "options.filter.statistics.positive": "Solo emociones positivas",
   "options.think.see": "Ver pensamiento",
   "options.think.delete": "Eliminar pensamiento",
+  "options.think.restore": " Restaurar pensamiento",
   "options.think.unarchive": "Desarchivar",
   "options.think.archive": "Archivar",
   "button.delete": "Eliminar",
+  "button.archive": "Archivar",
   "button.save": "Guardar",
   "button.back": "Volver",
   "button.color": "Color",
@@ -38,5 +40,20 @@
   "signup.login.info": "¿Tienes una cuenta?",
   "signup.login.link": "Inicia sesión",
   "place.new.title": "Crear un nuevo lugar",
-  "place.new.submit": "Crear lugar"
+  "place.new.submit": "Crear lugar",
+  "profile.new.title": "Información basica personal",
+  "profile.new.name.first": "Nombre",
+  "profile.new.name.last": "Apellido (Opcional)",
+  "profile.new.birth": "Fecha de nacimiento (Opcional)",
+  "profile.new.gender": "Genero",
+  "profile.new.gender.male": "Masculino",
+  "profile.new.gender.female": "Femenino",
+  "profile.new.gender.other": "Otro",
+  "profile.new.submit": "Crear perfil",
+  "think.info.place": "Lugar: {name}",
+  "think.info.date": "Creado el: {create}",
+  "think.new.title": "Crea un nuevo pensamiento",
+  "think.new.submit": "Crear pensamiento",
+  "think.new.emotion": "Emociones",
+  "trash.title": "Papelera"
 }
