--- a/web/src/translations/es.json
+++ b/web/src/translations/es.json
@@ -30,6 +30,7 @@
   "button.archive": "Archivar",
   "button.save": "Guardar",
   "button.back": "Volver",
+  "button.restore": "Restaurar",
   "button.color": "Color",
   "button.cancel": "Cancelar",
   "archive.title": "Archivados",
