feat(Root): Add react intl to account

--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -33,6 +33,8 @@
   "button.restore": "Restaurar",
   "button.color": "Color",
   "button.cancel": "Cancelar",
+  "button.delete.account": "Eliminar cuenta",
+  "button.password": "Cambiar contraseña",
   "archive.title": "Archivados",
   "select.new.place": "Lugar",
   "select.new.think": "Pensamiento",
@@ -60,10 +62,20 @@
   "profile.new.gender.female": "Femenino",
   "profile.new.gender.other": "Otro",
   "profile.new.submit": "Crear perfil",
+  "profile.edit.name.first": "Nombre",
+  "profile.edit.name.last": "Apellido",
+  "profile.edit.username": "Usuario",
+  "profile.edit.gender": "Genero",
+  "profile.edit.gender.female": "Femenino",
+  "profile.edit.gender.male": "Masculino",
+  "profile.edit.gender.other": "Otro",
+  "profile.edit.birth": "Fecha de nacimiento",
+  "profile.delete": "¿Quires eliminar tu cuenta?",
   "think.info.place": "Lugar: {name}",
   "think.info.date": "Creado el: {create}",
   "think.new.title": "Crea un nuevo pensamiento",
   "think.new.submit": "Crear pensamiento",
   "think.new.emotion": "Emociones",
-  "trash.title": "Papelera"
+  "trash.title": "Papelera",
+  "account.edit.tilte": "Tus datos"
 }
