--- a/apps/web/src/translations/es.json
+++ b/apps/web/src/translations/es.json
@@ -2,7 +2,7 @@
   "menu.add": "Crear",
   "menu.add.think": "Nuevo pensamiento",
   "menu.add.place": "Nuevo lugar",
-  "menu.list.dashboard": "Tablero",
+  "menu.list.dashboard": "Inicio",
   "menu.list.trash": "Papelera",
   "menu.list.archive": "Archivados",
   "menu.account": "Cuenta",
