Fix: update email for privacy

--- a/content/legal/privacy.mdx
+++ b/content/legal/privacy.mdx
@@ -27,4 +27,4 @@ We use your information to provide our Services, to improve our Platform, to und
 
 ## How To Contact Us
 
-For privacy-related questions, please contact us at mindfulyze@gmail.com.
+For privacy-related questions, please contact us at contact@mindfulyze.com.
