docs(Root): Remove redundacy word

--- a/content/changelog/add-templates.mdx
+++ b/content/changelog/add-templates.mdx
@@ -7,4 +7,4 @@ author: "bjohansebas"
 
 Now you have the possibility of having templates.
 
-This will help you create your thoughts more quickly, as well as have your own structure in all your thoughts.
+This will help you create your thoughts more quickly, as well as have your structure in all your thoughts.
