chore(app): 🏗️ migrate contentlayer to velite

--- a/apps/web/content/changelog/encrypted-thoughts.mdx
+++ b/apps/web/content/changelog/encrypted-thoughts.mdx
@@ -2,6 +2,7 @@
 title: Encrypted thoughts
 publishedAt: 2023-09-01
 summary: "Now all thoughts are encrypted."
+slug: encrypted-thoughts
 author: "bjohansebas"
 ---
 
