--- a/apps/web/content/changelog/filter-by-dates.mdx
+++ b/apps/web/content/changelog/filter-by-dates.mdx
@@ -3,6 +3,7 @@ title: Filter by dates
 publishedAt: 2024-02-03
 summary: "Now you can filter your thoughts by a date range."
 author: "bjohansebas"
+slug: filter-by-dates
 image: https://res.cloudinary.com/mindfulyze/image/upload/v1707004417/changelog/leinoniwnyqdsfcqaczk.png
 ---
 
