--- a/apps/web/content/changelog/add-templates.mdx
+++ b/apps/web/content/changelog/add-templates.mdx
@@ -2,6 +2,7 @@
 title: Templates
 publishedAt: 2023-09-12
 summary: "Now you have the possibility of having templates."
+slug: add-templates
 author: "bjohansebas"
 ---
 
