--- a/apps/web/content/changelog/edit-thoughts.mdx
+++ b/apps/web/content/changelog/edit-thoughts.mdx
@@ -2,6 +2,7 @@
 title: Edit thoughts
 publishedAt: 2023-09-23
 summary: "Create and edit your thoughts in a simpler and real-time manner."
+slug: edit-thoughts
 author: "bjohansebas"
 ---
 
