--- a/apps/web/content/changelog/improved-editor.mdx
+++ b/apps/web/content/changelog/improved-editor.mdx
@@ -2,6 +2,7 @@
 title: "Improvement in the thought editor."
 publishedAt: 2023-09-08
 summary: "The way thoughts were written improved."
+slug: improved-editor
 author: "bjohansebas"
 ---
 
