--- a/apps/web/content/changelog/redesign.mdx
+++ b/apps/web/content/changelog/redesign.mdx
@@ -2,6 +2,7 @@
 title: Platform improvements
 publishedAt: 2023-11-02
 summary: "Mindfulyze is getting a makeover! We have enhanced the interface."
+slug: redesign
 author: "bjohansebas"
 ---
 
